# graph_algorithms

./: .clangd  .gitignore  CMakeLists.txt  Makefile
include/: AppTypes.h  ControlPanel.h  EdgeDescriptor.h  Graph.h  GraphCanvas.h  GraphScene.h  GraphStorage.h  MainWindow.h  TaskPanel.h  Task_BFS_Distance.h  Task_Prim_MST.h  VertexDescriptor.h
src/: ControlPanel.cpp  GraphCanvas.cpp  GraphScene.cpp  MainWindow.cpp  TaskPanel.cpp  main.cpp  main_gui.cpp
tests/: test_graph.cpp
